--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-git+https://github.com/Rapptz/discord.py@rewrite
+git+https://github.com/Rapptz/discord.py
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 certifi==2021.10.8
 chardet==3.0.4
 charset-normalizer==2.0.7
-discord.py==1.7.3
 dnspython==1.16.0
 googletrans==3.1.0a0
 h11==0.9.0
